# ChangeLog for kde-base/kdesdk-misc
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.44 2007/10/19 22:42:44 philantrop Exp $

*kdesdk-misc-3.5.8 (19 Oct 2007)

  19 Oct 2007; Wulf C. Krueger <philantrop@gentoo.org>
  +kdesdk-misc-3.5.8.ebuild:
  Bump to KDE 3.5.8.

  11 Aug 2007; Raúl Porcel <armin76@gentoo.org> kdesdk-misc-3.5.6.ebuild:
  x86 stable wrt #185823

  11 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org>
  kdesdk-misc-3.5.6.ebuild:
  Marked stable on amd64 as per bug 176297.

  09 Aug 2007; Markus Rothe <corsair@gentoo.org> kdesdk-misc-3.5.6.ebuild:
  Stable on ppc64; bug #176297

  08 Aug 2007; Raúl Porcel <armin76@gentoo.org> kdesdk-misc-3.5.6.ebuild:
  alpha stable wrt #176297

  08 Aug 2007; Joseph Jezak <josejx@gentoo.org> kdesdk-misc-3.5.6.ebuild:
  Marked ppc stable.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  kdesdk-misc-3.5.6.ebuild:
  Stable on sparc wrt #176297

  24 May 2007; Carsten Lohrke <carlo@gentoo.org> kdesdk-misc-3.5.6.ebuild:
  Adjust MAXKDEVER.

  20 Jan 2007; Carsten Lohrke <carlo@gentoo.org> kdesdk-misc-3.5.6.ebuild:
  Correct MAXKDEVER.

*kdesdk-misc-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org>
  +kdesdk-misc-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  01 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  kdesdk-misc-3.5.0.ebuild:
  Make support for hidden visibility explicit.

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  kdesdk-misc-3.5.0.ebuild:
  Bump to 3.5.5 (pre-release).

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -kdesdk-misc-3.4.1.ebuild:
  Drop KDE 3.4.

  05 Aug 2006; Jason Wever <weeve@gentoo.org> kdesdk-misc-3.5.0.ebuild:
  Stable on SPARC.

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org>
  kdesdk-misc-3.5.0.ebuild:
  Bump to 3.5.4 (pre-release).

  08 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
  kdesdk-misc-3.5.0.ebuild: