@@ -1,0 +1,3 @@
+MD5 7777425fe349a25c78b808e3fc04165a kdesdk-4.0.0.tar.bz2 4219714
+RMD160 4f2c34a0e5939be6f833b48901c4c359e88d4b0c kdesdk-4.0.0.tar.bz2 4219714
+SHA256 cdecc5519f5b29dcf2eceb3fd6fbb90e3f800adcd67ace61b1c2986e55b8e4e3 kdesdk-4.0.0.tar.bz2 4219714
