@@ -5,6 +5,7 @@ DIST kdebase-3.5.5.tar.bz2 23851886 RMD160 6cf804de0487347a3e1d4ea6e5ba5114d23d9
 DIST kdebase-3.5.6.tar.bz2 24155599 RMD160 d3cbdcd148ea4c08d254f48faa10fc693517394c SHA1 0b37cae9637692c123a28c405dea8540e6b935c5 SHA256 245b35f8b2e1533f9ae92b3b07bee5339a716dfb8db363d0126d2e7409b7bd7e
 DIST kdebase-3.5.7.tar.bz2 24395088 RMD160 f43070b5428c3099c0abceed56041e5b4ff3c656 SHA1 833a35e4bbec2852f0f5267e680590be0c986594 SHA256 3c6d739abefc55b6cb64e1cf37b79f5993b666a5b40492471754794416b5c28d
 DIST kdebase-3.5.8.tar.bz2 24200172 RMD160 6441b5eaead5fff5c42c532fb11c0d37001cb6ea SHA1 07f2e33aef101e97237676719ef2bf8418d894b2 SHA256 0f1876d1c68f01ed8fee346c1bae4f53dd2c1dc56db94e309b3d1adfc6138493
+DIST kdebase-4.0.0.tar.bz2 4032455 RMD160 48d400a860b01697dde0e335f81a7c9622963247 SHA1 e510d8e814ebd8cdb6aadd67d7ec5edca41d8c59 SHA256 3881342b8921f0cd1077a24ecc3e2ca2a0b8c15e6d78654198d6f4cc64fc2990
 EBUILD kfind-3.5.5.ebuild 524 RMD160 f775d10742b93c737409b5a9735c7b122df6a5ff SHA1 dd2e2bf0b9ba7ce9251315ffc0e03d46bc699bb5 SHA256 a8846c22fe76c330c25f4429fb70d32ec2f221971fcbb611071951dd0aa48cc4
 MD5 6a40a02290eb3582723376f51a50e5b1 kfind-3.5.5.ebuild 524
 RMD160 f775d10742b93c737409b5a9735c7b122df6a5ff kfind-3.5.5.ebuild 524
@@ -21,10 +22,14 @@ EBUILD kfind-3.5.8.ebuild 535 RMD160 812530a2c816c8e10810c199a9541eb675eca6ee SH
 MD5 3f6a6e5ce64cb82b20347679ccbc8242 kfind-3.5.8.ebuild 535
 RMD160 812530a2c816c8e10810c199a9541eb675eca6ee kfind-3.5.8.ebuild 535
 SHA256 40bd46cbf828e999d73bd341f170ae172500cab10ce5897f0ac75edf8a396a74 kfind-3.5.8.ebuild 535
-MISC ChangeLog 8719 RMD160 42df0304a0a3b496546762bb1fda92f8e80aadd8 SHA1 a118cd84b55eddcf4c90abf7a6dfc0a13816fb52 SHA256 2fa8c7e496a076880bc25d75a3f79ad5370a2528aa5a730b2687460913de3b9c
-MD5 2db4b70adcb857eaa6b09c31d8add84f ChangeLog 8719
-RMD160 42df0304a0a3b496546762bb1fda92f8e80aadd8 ChangeLog 8719
-SHA256 2fa8c7e496a076880bc25d75a3f79ad5370a2528aa5a730b2687460913de3b9c ChangeLog 8719
+EBUILD kfind-4.0.0.ebuild 460 RMD160 472390b09b6acb353e8b0a76b79e486feb313068 SHA1 5ac084c2ef8e239ad4565f4704318dd3ace3f9c0 SHA256 44608a0da28dcc8048b1c6143254b1f00a50178f693698e93b37f334d7147bcb
+MD5 8583297f402f9d03b3998f6050674426 kfind-4.0.0.ebuild 460
+RMD160 472390b09b6acb353e8b0a76b79e486feb313068 kfind-4.0.0.ebuild 460
+SHA256 44608a0da28dcc8048b1c6143254b1f00a50178f693698e93b37f334d7147bcb kfind-4.0.0.ebuild 460
+MISC ChangeLog 8851 RMD160 06fefba12d111364fb78721df52531827c811193 SHA1 3eb5bb91b8ed05778d5827eea864e264a5de83cb SHA256 aee3cca346afcd5ac9794d19fafbe2af5abf276c5a3892f72e9cd4cacf36aed6
+MD5 486d5eb4b93f028cf2ea574471f390f3 ChangeLog 8851
+RMD160 06fefba12d111364fb78721df52531827c811193 ChangeLog 8851
+SHA256 aee3cca346afcd5ac9794d19fafbe2af5abf276c5a3892f72e9cd4cacf36aed6 ChangeLog 8851
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -41,10 +46,13 @@ SHA256 23405d9d3c9b6a401be4531233eafd0f25e8d6f904d8d1ad1ae419d02f8a01c4 files/di
 MD5 609c1e05f646cf1a355cfc61ae4de8ca files/digest-kfind-3.5.8 250
 RMD160 72df41076c89ffa7cef5e95f478e792aed311cf8 files/digest-kfind-3.5.8 250
 SHA256 72b216f81945b6b19a6000a57788e2532938180d429ee16abde6413319e48dd7 files/digest-kfind-3.5.8 250
+MD5 cefd19202bc6c6fb154c7420dce0b26b files/digest-kfind-4.0.0 247
+RMD160 6c7d1345ce7197e682fa347aa6728b5add1bc088 files/digest-kfind-4.0.0 247
+SHA256 aee36895ab90dc854f85dbdac079dc5eaccf1d89dbbb2166816b7b03211ef47b files/digest-kfind-4.0.0 247
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHGZzUl1Qf6C0PV04RAoq9AJ4gOYCHWqT4LgTnHACn9Wch+y3c2wCfYCi/
-LDjPBqvpp+Wjue6xBIg0fWM=
-=iPCo
+iD8DBQFHj+vfCkvF58q80IkRAnrhAKCvFKd01JItkl16xoP2I/h2L5CIdwCfeDoc
+9uSK61qlqD111P113l/J618=
+=algr
 -----END PGP SIGNATURE-----
