@@ -1,6 +1,12 @@
 # ChangeLog for kde-base/kdesdk-misc
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.44 2007/10/19 22:42:44 philantrop Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesdk-misc/ChangeLog,v 1.45 2008/01/17 23:54:33 philantrop Exp $
+
+*kdesdk-misc-4.0.0 (17 Jan 2008)
+
+  17 Jan 2008; Wulf C. Krueger <philantrop@gentoo.org>
+  +kdesdk-misc-4.0.0.ebuild:
+  Added KDE 4.0.0's kdesdk-misc.
 
 *kdesdk-misc-3.5.8 (19 Oct 2007)
 
